vendor/mico-2.3.2/test/idl/error/case17.idl

/*
 * constant declaration of improper type
 */

typedef any ANY;
const ANY c = 1;
